src/test/compile-fail/tag-variant-disr-type-mismatch.rs
//error-pattern: mismatched types

tag color {
    red = 1u;
    blue = 2;
}

fn main() {}
